--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "imagine/imagine": "^0.7.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
